# silent-letters

./: .gitignore  CMakeLists.txt
include/: CMU_Dict.h  convenience.h  silent_letters.h
src/: CMU_Dict.cpp  CMakeLists.txt  disabled_CMakeLists.txt  main.cpp  silent_letters.cpp
tests/: CMakeLists.txt  test_silent_letters.cpp
